# rechnerarchitektur

./: .gitignore  Test_file.md
Beispielcodes/week_2_c_samples/: dynamic_arrays.cpp  matrix.cpp  union.cpp
Serie 1/: CMakeLists.txt
Serie 1/src/skeleton/: cSerie1.c
Serie 2/: CMakeLists.txt
Serie 2/skeleton/: mips  mips.c  test.c
Serie 3/: CMakeLists.txt
Serie 3/skeleton/: compile.c  compiler.c  memory.c  mips.c  test.mips
Serie 4/: CMakeLists.txt
Serie 4/skeleton/: Makefile  knight-rider  knight-rider-cedric.s  knight-rider-gan.s  knight-rider-nicolas.s  knight-rider.s
Serie 5/Optional Task/: timer  timer.s
Serie 5/skeleton/: Makefile  paddle_ball  paddle_ball-cedric.s  paddle_ball-gan.s  paddle_ball-nicolas.s
Serie1XCode/Serie1XCode/: main.c
Serie1XCode/Serie1XCode.xcodeproj/: project.pbxproj
Serie1XCode/Serie1XCode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Serie1XCode/Serie1XCode.xcodeproj/project.xcworkspace/xcuserdata/cedric.xcuserdatad/: UserInterfaceState.xcuserstate
Serie1XCode/Serie1XCode.xcodeproj/xcuserdata/cedric.xcuserdatad/xcschemes/: xcschememanagement.plist
Testvorbereitung/Literatur/: mips_instructions.txt
Testvorbereitung/Uebungen/Serie 1/skeleton/: cSerie1.c
Testvorbereitung/Uebungen/Serie 2/skeleton/: test
Testvorbereitung/Uebungen/Serie 5/: CMakeLists.txt
Testvorbereitung/Uebungen/Serie 5/Optional Task/: Makefile  timer
Testvorbereitung/Uebungen/Serie 5/skeleton/: Makefile  paddle_ball  paddle_ball-cedric.s  paddle_ball-nicolas.s
Testvorbereitung/Uebungsstunde/Uebungsstunde Woche 02/: arrays.cpp  pointers.cpp
