cmake_minimum_required(VERSION 3.10)
project(Serie_5)

set(CMAKE_CXX_STANDARD 11)

add_executable(Serie_5
        "Additional information/Uebungsstunde Woche 11.pdf"
        "Optional Task/Makefile"
        "Optional Task/timer.s"
        skeleton/Makefile
        skeleton/paddle_ball
        skeleton/paddle_ball-cedric.s
        skeleton/paddle_ball-gan.s
        skeleton/paddle_ball-nicolas.s
        skeleton/paddle_ball.s
        serie5.pdf)
